@@ -37,5 +37,5 @@ AC_SUBST(docbookdtd_srcdir)
 AC_SUBST(docbookstyle_srcdir)
 AC_SUBST(gridturtle_srcdir)
 
-AC_OUTPUT([Makefile catalog src/Makefile installing/Makefile overview/Makefile set/Makefile src/activity/Makefile src/analysis/Makefile src/collections/Makefile src/defobj/Makefile src/gui/Makefile src/objectbase/Makefile src/random/Makefile src/simtools/Makefile src/simtoolsgui/Makefile src/space/Makefile src/tech/Makefile src/refbook.tex overview/overbook.tex installing/installbook.tex set/set.tex src/activity/activity.ent src/analysis/analysis.ent src/collections/collections.ent src/defobj/defobj.ent src/gui/gui.ent src/objectbase/objectbase.ent src/random/random.ent src/simtools/simtools.ent src/simtoolsgui/simtoolsgui.ent src/space/space.ent src/src.ent src/refbook.sgml set/set.sgml])
+AC_OUTPUT([Makefile catalog src/Makefile installing/Makefile overview/Makefile set/Makefile src/activity/Makefile src/analysis/Makefile src/collections/Makefile src/defobj/Makefile src/gui/Makefile src/objectbase/Makefile src/random/Makefile src/simtools/Makefile src/simtoolsgui/Makefile src/space/Makefile src/tech/Makefile src/refbook.tex overview/overbook.tex installing/installbook.tex set/set.tex src/refbook.sgml set/set.sgml src/src.ent])
 
